Bugfixes *TextCollapse *CSS-layout fixes *Grid fix *Menu expanded desktop

--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -135,7 +135,6 @@
 @media (min-width: 1000px) {
     .o-third {
         width: 50%;
-        max-height:440px;
     }
     .page .two-third {
         width: 66.66%;
@@ -223,17 +222,20 @@
 @media (min-width: 900px) and (max-width: 1200px) {
     .c-block {
         height: 27.5rem;
+        min-height:455px;
         overflow: hidden;
     }
 }
 @media (min-width: 1201px) and (max-width: 1599px) {
     .c-block {
-        height: 27.5rem
+        height: 27.5rem;
+        min-height:460px;
     }
 }
 @media (min-width: 1600px) {
     .c-block {
-        height: 27.5rem
+        min-height:460px;
+        height: 27.5rem;
     }
     .c-block.-video {
         height: 57.5rem
