--- a/src/less/main.less
+++ b/src/less/main.less
@@ -144,6 +144,9 @@ h2 {
   @media (min-width: 48em) {
     font-size: 2em;
   }
+  @media (min-width: 1200px) and (max-width:1400px) {
+    font-size: 1.5em;
+  }
 }
 
 h3 {
