--- a/src/less/navbar.less
+++ b/src/less/navbar.less
@@ -2089,6 +2089,9 @@ ul.supportMenu{
     .supportMenu{
         display:none;
     }
+    .bg-c.menu-bg-c div.content-c{
+        display:block !important;
+    }
     .no-touch .nav-link-level-2,
     .no-touch .nav-link-level-3 {
         padding: 0px 0px 8px 35px;
