--- a/src/less/page.less
+++ b/src/less/page.less
@@ -1064,6 +1064,9 @@ color:blue;
     margin: 15px 17%;
     pointer-events: none;
 }
+.menu-bg-c .bg-c-label:after{
+    display:none;
+}
 input.toggle-box-2:checked + .bg-c.menu-bg-c .bg-c-label:after  {
     transform: rotate(45deg);
     -ms-transform: rotate(45deg); 
